content/boomerang-flow/3.0.0/architecture/01.infrastructure.md
---
title: Infrastructure Architecture
index: 1
---

# Infrastructure architecture

The infrastructure is based on top of Kubernetes<sup>®</sup> using Jobs, ConfigMaps, Secrets, and Persistent Volumes.

## Kubernetes

### Nodes

The workflow tasks will run as Jobs on any node unless dedicated nodes are implemented using:

- Node taint: `dedicated=bmrg-worker:NoSchedule`
- Node label: `node-role.kubernetes.io/bmrg-worker=true`

### Ephemeral storage

As with all containers, there is ephemeral storage used that we have limited to 8GB by default. This impacts the number of workers that can be running in parallel, based on the amount of primary disk used. This is important. 

Flow workers have a setting to delete completed workers, if this is not enabled, then the completed workers stick around and use up the available ephemeral storage.

See [Kubernetes ephemeral storage](https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/#local-ephemeral-storage) reference information.

### Persistent volumes

If the workflow storage is enabled for a component, this creates and keeps the persistent volume during workflow execution. These are set at 1GB.

This can cause quite a churn of persistent volumes.

### Pod Anti-affinity

If dedicated nodes are enabled, a pod soft anti affinity is also enabled to ensure that workers are attempted to be balanced across nodes as best as possible.
